# MiniVim

./: CMakeLists.txt  README.md  main.cpp  ncurses_demo.cpp
include/: cursor.h  fun.h  mod.h  prefix.h  trie.h
src/: cursor.cpp  fun.cpp  main.cpp  mod.cpp  prefix.cpp
